---
source: spade-tests/src/typeinference.rs
---
fn make_an_int_appear<#uint N>() -> uint<N> __builtin__

fn test() {
    let x: uint<-1> = make_an_int_appear();
}


error: Expected type uint<-1>, got uint<#uint>
  ┌─ testinput:4:23
  │
1 │ fn make_an_int_appear<#uint N>() -> uint<N> __builtin__
  │                        ------ Type #uint inferred here
  ·
4 │     let x: uint<-1> = make_an_int_appear();
  │                 --    ^^^^^^^^^^^^^^^^^^^^ Expected uint<-1>
  │                 │      
  │                 Type -1 inferred here
  │
  = note: Expected: -1
                in: uint<-1>
               Got: #uint
                in: uint<#uint>
